[gd_scene load_steps=21 format=3 uid="uid://b6stlwl7oamft"]

[ext_resource type="Script" path="res://scenes/fight/fight_chest.gd" id="1_k1m7s"]
[ext_resource type="Texture2D" uid="uid://bds7li7s047vk" path="res://assets/fight_scene/background_chest.png" id="2_56xka"]
[ext_resource type="Texture2D" uid="uid://cq8gq236tsp2d" path="res://assets/fight_scene/input_chest.png" id="3_5gkqn"]
[ext_resource type="Texture2D" uid="uid://cp1aayx8j0p21" path="res://assets/fight_scene/attack_btn.png" id="4_jcyni"]
[ext_resource type="Texture2D" uid="uid://dwtpqnatu4gi" path="res://assets/fight_scene/attack_btn_inverted.png" id="5_3c25r"]
[ext_resource type="Texture2D" uid="uid://b0hv501rel7ts" path="res://assets/fight_scene/help_btn.png" id="6_fesqu"]
[ext_resource type="Texture2D" uid="uid://b13a3tb4nxwkm" path="res://assets/fight_scene/help_btn_inverted.png" id="7_78qh5"]
[ext_resource type="Texture2D" uid="uid://cvindexvstnd5" path="res://assets/fight_scene/eye_open.png" id="8_3ug56"]
[ext_resource type="Texture2D" uid="uid://do31lui8yy8th" path="res://assets/fight_scene/chest.png" id="8_lqj02"]
[ext_resource type="Texture2D" uid="uid://bsd55e3hf1yhd" path="res://assets/fight_scene/chest_open.png" id="9_krpgv"]
[ext_resource type="Texture2D" uid="uid://dgfngkn8x6mfw" path="res://assets/powerups/item_0.png" id="11_8sb2g"]
[ext_resource type="FontFile" uid="uid://3b6n0r1c7mkq" path="res://assets/map_scene/VCR_OSD_MONO_1.001.ttf" id="13_tpnjg"]

[sub_resource type="Theme" id="Theme_5545p"]
default_font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxw6u"]
content_margin_left = 7.0
bg_color = Color(0.141176, 0.223529, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1kkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s456w"]
content_margin_left = 7.0
bg_color = Color(0.141176, 0.223529, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay56a"]
bg_color = Color(0.305882, 0.572549, 0.654902, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6ru4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvl1c"]
bg_color = Color(0.305882, 0.572549, 0.654902, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npgfe"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_k1m7s")
metadata/_edit_vertical_guides_ = [576.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 1153.0
offset_bottom = 645.0
texture = ExtResource("2_56xka")

[node name="BackgroundInput" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(7.2, 7.2)
texture = ExtResource("3_5gkqn")

[node name="AttackButton" type="TextureButton" parent="."]
offset_left = 30.0
offset_top = 567.0
offset_right = 551.0
offset_bottom = 617.0
texture_normal = ExtResource("4_jcyni")
texture_hover = ExtResource("5_3c25r")
stretch_mode = 0

[node name="HelpButton" type="TextureButton" parent="."]
offset_left = 599.0
offset_top = 567.0
offset_right = 1128.0
offset_bottom = 617.0
texture_normal = ExtResource("6_fesqu")
texture_hover = ExtResource("7_78qh5")
stretch_mode = 0

[node name="Function" type="Label" parent="."]
offset_left = 24.0
offset_top = 246.0
offset_right = 277.0
offset_bottom = 292.0
theme = SubResource("Theme_5545p")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 2
text_direction = 2

[node name="Question" type="Label" parent="."]
offset_left = 40.0
offset_top = 465.0
offset_right = 210.0
offset_bottom = 488.0

[node name="Question2" type="Label" parent="."]
offset_left = 414.0
offset_top = 465.0
offset_right = 584.0
offset_bottom = 488.0

[node name="Question3" type="Label" parent="."]
offset_left = 796.0
offset_top = 465.0
offset_right = 966.0
offset_bottom = 488.0

[node name="Answer" type="LineEdit" parent="."]
offset_left = 40.0
offset_top = 507.0
offset_right = 328.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Lösung"

[node name="btn_a1" type="Button" parent="Answer"]
z_index = 2
offset_left = 285.0
offset_right = 316.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/hover = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6ru4")

[node name="TextureRect" type="TextureRect" parent="Answer/btn_a1"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 26.0
texture = ExtResource("8_3ug56")

[node name="Label" type="Label" parent="Answer"]
visible = false
offset_right = 288.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xvl1c")
text = "f(x)"

[node name="Answer2" type="LineEdit" parent="."]
offset_left = 414.0
offset_top = 507.0
offset_right = 702.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Lösung"

[node name="btn_a2" type="Button" parent="Answer2"]
z_index = 2
offset_left = 285.0
offset_right = 316.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/hover = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6ru4")

[node name="TextureRect" type="TextureRect" parent="Answer2/btn_a2"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 26.0
texture = ExtResource("8_3ug56")

[node name="Label" type="Label" parent="Answer2"]
visible = false
offset_right = 288.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xvl1c")
text = "f(x)"

[node name="Answer3" type="LineEdit" parent="."]
offset_left = 795.0
offset_top = 507.0
offset_right = 1083.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Lösung"

[node name="btn_a3" type="Button" parent="Answer3"]
z_index = 2
offset_left = 285.0
offset_right = 316.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/hover = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6ru4")

[node name="TextureRect" type="TextureRect" parent="Answer3/btn_a3"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 26.0
texture = ExtResource("8_3ug56")

[node name="Label" type="Label" parent="Answer3"]
visible = false
offset_right = 288.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xvl1c")
text = "f(x)"

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
offset_left = 40.0
offset_top = 507.0
offset_right = 356.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")

[node name="OptionButton2" type="OptionButton" parent="."]
visible = false
offset_left = 414.0
offset_top = 507.0
offset_right = 730.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")

[node name="OptionButton3" type="OptionButton" parent="."]
visible = false
offset_left = 796.0
offset_top = 507.0
offset_right = 1112.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 324)
zoom = Vector2(1.685, 1.685)

[node name="Answer4" type="LineEdit" parent="."]
offset_left = 40.0
offset_top = 377.0
offset_right = 328.0
offset_bottom = 408.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Lösung"

[node name="btn_a4" type="Button" parent="Answer4"]
z_index = 2
offset_left = 285.0
offset_right = 316.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/hover = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6ru4")

[node name="TextureRect" type="TextureRect" parent="Answer4/btn_a4"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 26.0
texture = ExtResource("8_3ug56")

[node name="Label" type="Label" parent="Answer4"]
visible = false
offset_right = 288.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xvl1c")
text = "f(x)"

[node name="Answer5" type="LineEdit" parent="."]
offset_left = 414.0
offset_top = 377.0
offset_right = 701.0
offset_bottom = 408.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Lösung"

[node name="btn_a5" type="Button" parent="Answer5"]
z_index = 2
offset_left = 285.0
offset_right = 316.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/hover = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay56a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6ru4")

[node name="TextureRect" type="TextureRect" parent="Answer5/btn_a5"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 26.0
texture = ExtResource("8_3ug56")

[node name="Label" type="Label" parent="Answer5"]
visible = false
offset_right = 288.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xvl1c")
text = "f(x)"

[node name="OptionButton4" type="OptionButton" parent="."]
visible = false
offset_left = 40.0
offset_top = 377.0
offset_right = 356.0
offset_bottom = 408.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")

[node name="OptionButton5" type="OptionButton" parent="."]
visible = false
offset_left = 414.0
offset_top = 377.0
offset_right = 730.0
offset_bottom = 408.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")

[node name="Question4" type="Label" parent="."]
offset_left = 40.0
offset_top = 329.0
offset_right = 210.0
offset_bottom = 352.0

[node name="Question5" type="Label" parent="."]
offset_left = 414.0
offset_top = 329.0
offset_right = 584.0
offset_bottom = 352.0

[node name="Chest" type="Sprite2D" parent="."]
position = Vector2(598, 312)
scale = Vector2(7.13333, 7.13333)
texture = ExtResource("8_lqj02")

[node name="Chest2" type="Sprite2D" parent="."]
visible = false
position = Vector2(598, 312)
scale = Vector2(7.13333, 7.13333)
texture = ExtResource("9_krpgv")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1155.0
offset_bottom = 649.0
color = Color(0.0117647, 0.0509804, 0.0627451, 0.639216)

[node name="lbl_msg" type="Label" parent="ColorRect"]
visible = false
z_index = 3
layout_mode = 0
offset_left = 8.0
offset_top = 108.0
offset_right = 1141.0
offset_bottom = 388.0
theme_override_colors/font_color = Color(0.905882, 0.929412, 0.85098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.564706)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_tpnjg")
theme_override_font_sizes/font_size = 66
text = "Schade!"
horizontal_alignment = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
visible = false
layout_mode = 0
offset_left = 485.0
offset_top = 179.0
offset_right = 666.0
offset_bottom = 360.0
texture = ExtResource("11_8sb2g")

[node name="lbl_20G" type="Label" parent="ColorRect"]
visible = false
z_index = 3
layout_mode = 0
offset_left = 14.0
offset_top = 202.0
offset_right = 1147.0
offset_bottom = 482.0
theme_override_colors/font_color = Color(0.905882, 0.929412, 0.85098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.564706)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_tpnjg")
theme_override_font_sizes/font_size = 96
text = "20G"
horizontal_alignment = 1
uppercase = true

[node name="lbl_amount" type="Label" parent="ColorRect"]
visible = false
z_index = 3
layout_mode = 0
offset_left = 622.0
offset_top = 311.0
offset_right = 696.0
offset_bottom = 357.0
theme_override_colors/font_color = Color(0.905882, 0.929412, 0.85098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.564706)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_tpnjg")
theme_override_font_sizes/font_size = 40
text = "2x"
horizontal_alignment = 1
uppercase = true

[connection signal="button_down" from="AttackButton" to="." method="_on_attack_button_button_down"]
[connection signal="button_up" from="AttackButton" to="." method="_on_attack_button_button_up"]
[connection signal="button_down" from="HelpButton" to="." method="_on_help_button_button_down"]
[connection signal="button_up" from="HelpButton" to="." method="_on_help_button_button_up"]
[connection signal="focus_entered" from="Answer" to="." method="_on_answer_focus_entered"]
[connection signal="button_down" from="Answer/btn_a1" to="." method="_on_btn_a_1_button_down"]
[connection signal="button_up" from="Answer/btn_a1" to="." method="_on_btn_a_1_button_up"]
[connection signal="focus_entered" from="Answer2" to="." method="_on_answer_2_focus_entered"]
[connection signal="button_down" from="Answer2/btn_a2" to="." method="_on_btn_a_2_button_down"]
[connection signal="button_up" from="Answer2/btn_a2" to="." method="_on_btn_a_2_button_up"]
[connection signal="focus_entered" from="Answer3" to="." method="_on_answer_3_focus_entered"]
[connection signal="button_down" from="Answer3/btn_a3" to="." method="_on_btn_a_3_button_down"]
[connection signal="button_up" from="Answer3/btn_a3" to="." method="_on_btn_a_3_button_up"]
[connection signal="item_focused" from="OptionButton" to="." method="_on_option_button_item_focused"]
[connection signal="item_focused" from="OptionButton2" to="." method="_on_option_button_2_item_focused"]
[connection signal="item_focused" from="OptionButton3" to="." method="_on_option_button_3_item_focused"]
[connection signal="focus_entered" from="Answer4" to="." method="_on_answer_4_focus_entered"]
[connection signal="button_down" from="Answer4/btn_a4" to="." method="_on_btn_a_4_button_down"]
[connection signal="button_up" from="Answer4/btn_a4" to="." method="_on_btn_a_4_button_up"]
[connection signal="focus_entered" from="Answer5" to="." method="_on_answer_5_focus_entered"]
[connection signal="button_down" from="Answer5/btn_a5" to="." method="_on_btn_a_5_button_down"]
[connection signal="button_up" from="Answer5/btn_a5" to="." method="_on_btn_a_5_button_up"]
[connection signal="item_focused" from="OptionButton4" to="." method="_on_option_button_item_focused"]
[connection signal="item_focused" from="OptionButton5" to="." method="_on_option_button_2_item_focused"]
